# task-manager

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/api/routes/: health.py  tasks.py
app/consumers/: task_consumer.py
app/core/: config.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: rabbitmq_service.py  task_service.py  teams_service.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: TaskForm.js  TaskItem.js  TaskList.js
frontend/src/services/: api.js
tests/: conftest.py  test_api.py  test_models.py  test_repositories.py  test_services.py
tests/integration/: README.md  conftest.py  test_api_integration.py  test_database_integration.py  test_service_integration.py
